--- a/html/index.html
+++ b/html/index.html
@@ -13,9 +13,9 @@
         </a>
     </div>
     <div class="egg-selection">
-        <a href="../html/crack/pinkeggcrack.html"><img src="../images/pink.png" alt="Pink Egg"></a>
-        <a href="../html/crack/blueeggcrack.html"><img src="../images/blue.png" alt="Blue Egg"></a>
-        <a href="../html/crack/greeneggcrack.html"><img src="../images/green.png" alt="Green Egg"></a>
+        <a href="../html/crack/pinkeggcrack.html"><img src="../images/Pink.png" alt="Pink Egg"></a>
+        <a href="../html/crack/blueeggcrack.html"><img src="../images/Blue.png" alt="Blue Egg"></a>
+        <a href="../html/crack/greeneggcrack.html"><img src="../images/Green.png" alt="Green Egg"></a>
     </div>
     <h1 class="writing"><span>Welcome!
                     Your pooby will be so  excited to meet you!
