--- a/html/crack/pinkeggcrack.html
+++ b/html/crack/pinkeggcrack.html
@@ -19,6 +19,9 @@
     <h1 class="writing"><span>Poke the egg until it    hatches!
     </span>
     </h1>
+    <footer>
+        <button id="copy-link-button">Share with friends!</button>
+    </footer>
     <script src="../../javascript/scripts.js"></script>
 </body>
 </html>
