--- a/html/crack/finalgreencrack.html
+++ b/html/crack/finalgreencrack.html
@@ -18,6 +18,9 @@
     <div class="space"></div>
     <h1 class="writing"><span>What's going on?        Press the Huh? Button!</span>
     </h1>
+    <footer>
+        <button id="copy-link-button">Share with friends!</button>
+    </footer>
     <script src="../../javascript/scripts.js"></script>
 </body>
 </html>
