--- a/html/pooby/bluepooby.html
+++ b/html/pooby/bluepooby.html
@@ -24,6 +24,9 @@
           Try letting it read, eat,or sleep!
     </span>
     </h1>
+    <footer>
+        <button id="copy-link-button">Share with friends!</button>
+    </footer>
     <script src="../../javascript/scripts.js"></script>
 </body>
 </html>
